@@ -62,6 +62,11 @@ struct fuse_session *fuse_lowlevel_new_compat25(struct fuse_args *args,
                         const struct fuse_lowlevel_ops_compat25 *op,
                         size_t op_size, void *userdata);
 
+size_t fuse_dirent_size(size_t namelen);
+
+char *fuse_add_dirent(char *buf, const char *name, const struct stat *stbuf,
+                      off_t off);
+
 #ifndef __FreeBSD__
 
 #include <sys/statfs.h>
