@@ -85,6 +85,7 @@ FUSE_2.5 {
 
 FUSE_2.6 {
 	global:
+		fuse_add_direntry;
 		fuse_lowlevel_new;
 		fuse_lowlevel_new_compat25;
 		fuse_main_real;
@@ -94,4 +95,7 @@ FUSE_2.6 {
 		fuse_opt_insert_arg;
 		fuse_setup;
 		fuse_setup_compat25;
+
+	local:
+		 *;
 } FUSE_2.5;
